# sheetkit

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  UPSTREAM.md
.github/workflows/: ci.yml
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/spreadsheets/: SKILL.md
crates/sheetd/: Cargo.toml
crates/sheetd/src/: gs.rs  main.rs  mcp.rs  repl.rs  rpc.rs  serve.rs  store.rs  tools.rs
crates/sheetd/tests/: gsheets_e2e.rs  lifecycle_e2e.rs  mcp_e2e.rs  serve_e2e.rs
crates/sheetkit/: Cargo.toml
crates/sheetkit-wasm/: Cargo.toml
crates/sheetkit-wasm/src/: lib.rs
crates/sheetkit/src/: addr.rs  book.rs  cmd.rs  delta.rs  displace.rs  fills.rs  gsheets.rs  lib.rs  regions.rs  session.rs  view.rs
crates/sheetkit/tests/: compression.rs  engine_functions.rs
docs/: channel-protocol.md  gsheets.md  showcase.md
