[workspace]
members = ["crates/sheetkit", "crates/sheetd"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An LLM-native spreadsheet toolkit built on the IronCalc engine"

[workspace.dependencies]
# The engine version is a protocol contract: sync blobs and .ic snapshots are
# version-locked. Bump both crates together, never independently.
ironcalc_base = "=0.7.1"
ironcalc = "=0.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
