[package]
name = "sheetd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spreadsheet engine server: MCP over stdio and an interactive REPL"

[dependencies]
sheetkit = { path = "../sheetkit" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
